--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-           "name": "(lldb) Launch",
-            "program": "${workspaceFolder}/a.out",
-            "args": ["test_5.fillit"],
-            "stopAtEntry": true,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": true,
-            "MIMode": "lldb"
-        }
+    {
+    "name": "(lldb) Launch",
+    "type": "cppdbg",
+    "request": "launch",
+    "program": "${workspaceFolder}/a.out",
+    "args": ["test_5.fillit"],
+    "stopAtEntry": true,
+    "cwd": "${workspaceFolder}",
+    "environment": [],
+    "externalConsole": true,
+    "MIMode": "lldb"
+    }
     ]
-}
+    }
