--- a/sanya_sdelyal/Makefile
+++ b/sanya_sdelyal/Makefile
@@ -3,10 +3,10 @@ NAME = fillit
 all: $(NAME)
 $(NAME):
 	make -C libft/ 
-	clang -Wall  -I libft/ -o ft_cut_figures.o -c ft_cut_figures.c
-	clang -Wall  -I libft/ -o ft_fillit.o -c ft_fillit.c
-	clang -Wall  -I libft/ -o ft_read_map.o -c ft_read_map.c
-	clang -Wall  -I libft/ -o main.o -c main.c
+	clang -Wall  -Wall -Wextra -Werror -I libft/ -o ft_cut_figures.o -c ft_cut_figures.c
+	clang -Wall  -Wall -Wextra -Werror -I libft/ -o ft_fillit.o -c ft_fillit.c
+	clang -Wall  -Wall -Wextra -Werror -I libft/ -o ft_read_map.o -c ft_read_map.c
+	clang -Wall  -Wall -Wextra -Werror -I libft/ -o main.o -c main.c
 	clang -o $(NAME) main.o ft_cut_figures.o ft_fillit.o ft_read_map.o -I libft/ -L libft/ -lft
 clean:
 	rm -rf libft/*.o
